# nvda-remote-server-rs

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
bench/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
bench/src/: main.rs
config/: config.toml
docs/: e2e-encryption.md  llm-implementation-guide.md
src/: app_config.rs  channel.rs  client.rs  config.rs  lib.rs  main.rs  protocol.rs  server.rs  tls.rs  user.rs
src/observability/: dashboard.rs  http.rs  metrics.rs  mod.rs
tests/: e2e_crypto.rs  integration.rs
