[package]
name = "nvdaremote-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
config = "0.15"
dashmap = "6"
rand = "0.10"
rcgen = "0.14"
rustls = "0.23"
rustls-pemfile = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
